# smtp-gui

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: config.rs  mailer.rs  main.rs  query.rs
src/components/: input.rs  mod.rs
