[package]
name = "smtp-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[profile.dev]
debug = 1